--- a/52_js/part4/82_jq_index().html
+++ b/52_js/part4/82_jq_index().html
@@ -26,6 +26,22 @@
         /* 
             $('선택자').index() ~ 요소의 순서 값을 반환
         */
+       /* 
+            목록 중에 하나를 클릭하면
+            몇 번째 목록을 클릭했는지 그 번호를 
+            경고창으로 표시하시오.
+       */
+
+       // li를 클릭하면 함수를 실행
+       $('li').click(function(){
+            // $(this)? 이벤트가 발생한 객체
+            // 클릭한 li의 인덱스 번호를 idx에 저장
+            // index 번호는 0, 1, 2, ...
+            let idx = $(this).index();
+            // 경고창으로 idx 출력
+            alert(idx);
+       });
+       
 
     </script>
 </body>
