--- a/52_js/part4/85_jq_pageX,pageY.html
+++ b/52_js/part4/85_jq_pageX,pageY.html
@@ -23,6 +23,29 @@
             e.pageX ~ 브라우저상 마우스 커서의 x축 좌표
             e.pageY ~ 브라우저상 마우스 커서의 y축 좌표
         */
+        /* 
+            창 위에 마우스를 이동하면
+            마우스의 x좌표와 y좌표를 span 요소에 출력하시오.
+        */
+
+        // $('선택자')
+        // $("선택자")
+        // $(window) ~ BOM 객체
+        // $(document) ~ DOM 객체
+        // $(this) ~ this는 키워드(예약어)
+        // 이벤트(e) 객체 속성: pageX, pageY
+
+        // 창에서 마우스를 움직이면 함수 실행
+        $(window).mousemove(function(e){
+            //.posX에 마우스의 x좌표를 표시한다.
+            //이벤트 객체 속성
+            // let mouseX = e.pageX;
+            $('.posX').text(e.pageX);
+            console.log(typeof e.pageX);
+            //.posY에 마우스의 y좌표를 표시한다.
+            // let mouseY = e.pageY;
+            $('.posY').text(e.pageY);
+        });
 
 
     </script>
