--- a/52_js/part4/sol/86_jq_scrollTop().html
+++ b/52_js/part4/sol/86_jq_scrollTop().html
@@ -30,7 +30,7 @@
         */
 
 
-        $(window).on('scroll', function (e) {
+        $(window).on('scroll', function () {
             var ab = $(this).scrollTop();
             $('p').text(ab);
         });
