--- a/52_js/part4/sol/87_jq_offset(),top.html
+++ b/52_js/part4/sol/87_jq_offset(),top.html
@@ -8,10 +8,12 @@
     <title>HTML+CSS+JS</title>
     <style>
         div {
+            position: absolute;
+            left: 50px;
+            top: 300px;
             width: 200px;
             height: 200px;
             background: blue;
-            margin-top: 300px;
         }
     </style>
 </head>
