--- a/52_js/part4/sol/88_jq_load(),play(),pause().html
+++ b/52_js/part4/sol/88_jq_load(),play(),pause().html
@@ -8,7 +8,7 @@
     <title>HTML+CSS+JS</title>
     <style>
         .box {
-            width: 800px;
+            width: 400px;
         }
 
         .box video {
@@ -27,7 +27,7 @@
 <body>
     <div class="box">
         <video>
-            <source src="../assets/mov_bbb.mp4" type="video/mp4">
+            <source src="../../assets/video/mov_bbb.mp4" type="video/mp4">
         </video>
     </div>
 
