--- a/52_js/part4/88_jq_load(),play(),pause().html
+++ b/52_js/part4/88_jq_load(),play(),pause().html
@@ -8,11 +8,13 @@
     <title>HTML+CSS+JS</title>
     <style>
         .box {
-            width: 800px;
+            width: 500px;
         }
+
         .box video {
             width: 100%;
         }
+
         .btnSet li {
             float: left;
             margin: 0 20px;
@@ -25,7 +27,7 @@
 <body>
     <div class="box">
         <video>
-            <source src="../assets/mov_bbb.mp4" type="video/mp4">
+            <source src="../assets/video/mov_bbb.mp4" type="video/mp4">
         </video>
     </div>
 
@@ -43,7 +45,35 @@
             $('video').get(n).play() ~ 비디오 재생하기
             $('video').get(n).pause() ~ 비디오 불러오기
         */
+        /* 
+            load 버튼을 클릭하면
+            비디오를 처음으로 지정한다.
+            play 버튼을 클릭하면
+            비디오를 실행시킨다.
+            pause 버튼을 클릭하면
+            비디오를 일시정지시킨다.
 
+            이벤트: click
+            메서드: load(), play(), pause(), get()
+        */
+        // 이벤트 메서드의 매개변수는 함수
+        // load 버튼을 클릭하면 함수 실행
+        const vid = $('video').get(0);
+
+        $('.load').click(function(){
+            // 비디오를 처음 상태로 돌린다.
+            vid.load();
+        });
+        // play 버튼을 클릭하면 함수 실행
+        $('.play').click(function(){
+            // 비디오를 실행
+            vid.play();
+        });
+        // pause 버튼을 클릭하면 함수 실행
+        $('.pause').click(function(){
+            // 비디오를 일시정지
+            vid.pause();
+        });
 
     </script>
 </body>
