--- a/52_js/part5/91-2_nav.html
+++ b/52_js/part5/91-2_nav.html
@@ -46,7 +46,7 @@
 
         /* 1depth */
         .main {
-            display: flex;
+            /* display: flex; */
         }
 
         .main>li {
@@ -134,19 +134,13 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.0/jquery.min.js"></script>
     <script>
         // 내비게이션바
-        // 메인메뉴 li에 마우스를 올리면 함수 실행
-        $(".main > li").mouseenter(function () {
-            // this란? 마우스가 올라간 메인메뉴 li
-            // 메인메뉴 li의 자식인 .sub가 위에서 아래로 나타난다.
-            // stop은 이전 동작을 정지
-            // stop()은 효과 메서드 앞에만 붙인다.
-            // 효과 메서드: hide(), show(), fadeIn(), fadeOut(), slideDown(), slideUp(), animate(), ...
-            $(this).children(".sub").stop().slideDown();
-        });
-        // 메인메뉴li에서 마우스가 벗어나면 함수 실행
-        $(".main > li").mouseleave(function () {
-            // 마우스가 벗어난 li의 자식 .sub가 아래서 위로 사라진다.
-            $(this).children(".sub").stop().slideUp();
+        $(".main li").mouseenter(function () {
+            //children(자식)
+            //find(자식+손자 -> 후손)
+            $(this).find(".sub").stop().slideDown();
+        });        
+        $(".main li").mouseleave(function () {           
+            $(this).find(".sub").stop().slideUp();
         });
     </script>
 </body>
